# 14202_fedin_cpp

./: README.md  commands.txt
stream/: CMakeLists.txt  area.h  container.h  generator.h  main.cpp  noisy.cpp  noisy.h  rangeview.h  stream.h  test.cpp
xor_list/: CMakeLists.txt  main.cpp  xor_list.h  xor_list_test.cpp  xor_list_test.h  xorlist.h
